[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/flappyBird.png" type="Texture" id=1]
[ext_resource path="res://Src/Actors/Bird.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 23.1948

[sub_resource type="CircleShape2D" id=1]
radius = 15.2971

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 172 )

[node name="PlayerNode" type="Node2D"]

[node name="Bird" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="Detect" type="Area2D" parent="Bird"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bird/Detect"]
position = Vector2( -2, 6 )
shape = SubResource( 2 )

[node name="FlappyBird" type="Sprite" parent="Bird"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bird"]
position = Vector2( 1, 7 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Bird"]
position = Vector2( 162, 0 )
current = true
zoom = Vector2( 0.6, 0.6 )

[node name="RichTextLabel" type="RichTextLabel" parent="Bird/Camera2D"]
margin_left = -9.0
margin_top = -95.0
margin_right = 31.0
margin_bottom = -55.0

[node name="Resetter" type="Area2D" parent="Bird"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bird/Resetter"]
position = Vector2( -269, 0 )
shape = SubResource( 3 )

[connection signal="area_entered" from="Bird/Detect" to="Bird" method="_on_Detect_area_entered"]
[connection signal="body_entered" from="Bird/Detect" to="Bird" method="_on_Detect_body_entered"]
[connection signal="body_entered" from="Bird/Resetter" to="Bird" method="_on_Resetter_body_entered"]
